# nox

./: .gitignore  project.code-workspace
cert/: .gitignore  certs.sh  server.openssl.cnf
code/: .dockerignore  .gitignore  Cargo.toml  rustfmt.toml
code/app/client/: Cargo.toml
code/app/client/src/: main.rs
code/app/server/: Cargo.toml
code/app/server/src/: api.rs  main.rs
code/docker/: Dockerfile
docs/: README.md
