[workspace]
members = [
    "app/server",
    "app/client",
]

[workspace.metadata.cargo-udeps.ignore]
normal = [
    "openssl",
    "tokio-compat-02"
]

[workspace.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio-compat-02 = "0.2.0"
async-trait = "^0.1"
hyper = "1.4.1"
hyper-util = "0.1.6"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tokio-rustls = "0.26.0"
bytes = "^1.5.0"
mime = "^0.3.17"
thiserror = "1.0.57"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "3.6.1"
reqwest = { version = "0.11.24", features = ["json"] }
dotenv = "0.15.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = [
    "cors",
    "compression-gzip",
    "compression-deflate",
    "trace",
] }
axum = { version = "0.7.5", features = ["ws", "http2", "multipart"] }
axum-extra = { version = "0.9.2", features = ["cookie-signed", "typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "fmt",
] }
uuid = { version = "1.7.0", features = ["v4"] }
fancy-regex = "0.11.0"
chrono = { version = "0.4.34", features = ["serde"] }
anyhow = "1.0.79"
futures-util = "0.3.30"
sha2 = "0.10.8"
base64 = "0.21.7"
rustls = { version = "0.23.11", features = ["tls12"] }
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
urlencoding = "2.1.3"
time = "0.3.34"
argon2 = "0.5.3"
rand = "0.8.5"
nanoid = "0.4.0"
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
webpki = "0.22.4"
x509-parser = "0.16.0"

[workspace.dev-dependencies]
